# DCNVProd

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CNV_generator_new.py  Dockerfile  Dockerfile.train  README.md  basic_model.dvc  main.py  pipeline.sh  pyproject.toml  requirements.txt  test.ipynb
.dvc/: config
.github/workflows/: CI.yml  main.yml
analysis/: RNN.py  basic_model_selection.ipynb  feature_selection.ipynb  hyperparam_tuning.py  logistic_regression.py  plots.py  simple_heuristic.py
results/: ML_model.txt  simple_DNN_model.txt  simple_heuristic.txt  simple_log_reg.txt  simple_log_reg_with_featue_cross.txt
src/: CNV_generator_new.py  Stats.py  argparser.py  cnv_generator.py  combine_ref_gens.sh  config.py  dnn.py  dnn_hand.py  fvecTrain.py  generate_features.py  main.py  metrics.py  paths.py  plots.py  real_data_preprocessing.py  simChr.py  simReads.py  sim_reads.py  test.ipynb  train.py  train_basic_model.py  utils.py
src_new_way/: CNV_generator.py  CNV_generator_old.py  argparser.py  bam_print.py  combine_ref_gens.sh  download_data.py  generate_features.py  generate_stats.py  main.py  real_data_preprocessing.py  sim_reads.py  train.py  utils.py
tests/: conftest.py  test_argparser.py  test_bedfile_with_normal_seq.py  test_clean_bed_dup_del.py  test_create_bed_with_coords.py  test_create_total_bed.py  test_create_total_windows.py  test_generate_features.py  test_generate_freq.py  test_metrics.py  test_modify_fasta_file.py  test_sim_reads.py  test_utils.py
tests/test_generate_features/: sim_data.bam  target_file.csv
(+1 files in other folders)
