[tool.poetry]
name = "CNV_ML"
version = "0.1.0"
description = ""
authors = ["Bartosz Lewandowski <112126@student.upwr.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.79"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
